Version 12     Live Server Fixes

--Fixed precision bug in computing house balance change after tournament
  prizes are paid.

--Changed so that the buy-in for a tournament match isn't counted against your
  profit stat until the match ends (matches that go over deadline simply don't
  count instead of counting as a profit loss for both players).

--Fixed a bug in pairwise tournament feeding blocking so that it only blocks
  based on current tournament pairwise profits.

--Fixed prize calculations to handle settings where every player gets a prize.

--Added entry fee and prize pool display to tournament prize list.

--Fixed active users graph to filter out duplicates.

--Fixed tournament so that tied players split the total prize sum at their
  prize levels (thanks Josh C).

--Fixed tournament stats to not uptick game count for a player until game is
  over (so you can't reload leaderboard and look for the uptick to figure out
  who you just joined a game with) (thanks Benjamin Y).

--Added Next and Previous links to scroll through full leaderboards.

--Fixed to retry random name picking 10 times when creating a new account
  (there are only 443,556 possible names, so duplicate names will be necessary
  at some point, but avoid them as much as possible).

--Fixed rare DENIED BY SERVER error when your opponent leaves game right at the
  end of a round (thanks Pilam69).

--Fixed to return pots to both players in cases where both time out.

--Fixed so that in case where both players disconnect past the deadline and one
  reconnects first, that first-reconnecter doesn't win the pot by default (in
  these cases, the pot is split and returned to both players).

--Added server support for ante that goes up each round.

--Leaderboards are now cached and only updated every 5 minutes.  Elo
  leaderboard now uses paging.

--Fixed hole in leaderboard caching that let people force updates by skipping
  to sub-whole-page positions (thanks Ralph V).


